# nikaritds

./: .gitignore  README.md  contabilizar_slack.gs  pyproject.toml  read_email_fulfillment.gs
clients_products_study/: prevision_demanda.ipynb  productos_con_bandana_o_abanico.csv  sika_products.ipynb
clients_study/: estudio_clientes.ipynb  financial_study_and_clients.ipynb  oan_nikki_nikarit.ipynb  sika_products.ipynb
etl_shopify_gbq/: etl_firbase_bgq.ipynb  etl_sumup_firbase_bgq.ipynb  fr.json  get_products_id.ipynb  index.html  shop_clients_togbq_test_mini_etl.ipynb  test_new_miOng.ipynb  updateFBCollecttionInGBQ.ipynb  update_cuentas.py  update_sales.py
scripts_apps/: cerrar_trimestre.ipynb  contabilizar_donaciones.py  contabilizar_payouts_donaciones.ipynb  contabilizar_payouts_donaciones_ventas.ipynb  contabilizar_payouts_donaciones_ventas_solucion2022.ipynb  contabilizar_transacciones.ipynb  contabilizar_ventas.ipynb  etl_contabilizar_payouts.py  read_email_fulfillment.gs  simular_pedido.ipynb  update_donors.py
web/: order_confirmation_sanvalentin.html
